--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Sometype+Mono&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 *{
     margin: 0;
-    font-family: 'Sometype Mono', monospace;
+    font-family: "Nunito Sans", monospace;
   }
